--- a/gram/templates/create_post.html
+++ b/gram/templates/create_post.html
@@ -1,4 +1,4 @@
-{% load bootstrap3 %} {% load static %}
+ {% load static %}
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,9 +9,10 @@
     <title>Create Post {{title}}</title>
     {% else %}
     <title>Create Post</title>
-    {% endif %} {% block styles %} {% bootstrap_css %}
+    {% endif %} 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="{%static  '/css/create_post.css' %}" />
-    {% endblock %}
+    
   </head>
     <body class="m-5">
       <div class="container">
@@ -27,7 +28,9 @@
                 
                 <!-- {{ form.as_p }} -->
                 
-                
+                <div class="form-group m-3 text-center">
+                  CREATE A POST!!! 
+                </div>
 
                 <div class="form-group m-3">
                   <label>Name</label>
@@ -89,9 +92,7 @@
       </div>
 
 
-    {% block scripts %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    {% bootstrap_javascript %} {% endblock %}
+    
   </body>
 </html>
 
